# spectria-logger

./: .gitignore  LICENSE  README.md  pyproject.toml
keras_spectra/: __init__.py  callback.py  cli.py  server.py  writer.py
spectria-logger/: pyproject.toml
spectria-logger/src/spectria/logger/: __init__.py  keras.py  writer.py
src/spectria/: cli.py  server.py
