[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spectria"
version = "0.1.0"
description = "HTTP/SSE server for live training visualization in Spectria"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Matthew D. Scholefield" },
]
dependencies = ["spectria-logger", "starlette>=0.37", "uvicorn>=0.29"]

[project.scripts]
spectria = "spectria.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["spectria*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
