[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spectria-logger"
version = "0.2.1"
description = "JSONL logging library for live training visualization in Spectria"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Matthew D. Scholefield" },
]
keywords = ["training", "visualization", "spectria", "logging", "ml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
keras = ["keras>=3.0"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["spectria*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
